fix(PodLogService): use hybrid approach for final log fetching
Implements sinceTime(lastTimestamp - 60s) instead of fixed 60s window to handle both:
- Multi-container out-of-order logs with 60s safety buffer
- Prolonged watchLog() failures with unbounded lookback
Hash-based deduplication efficiently handles increased overlap.

Also updates LoggingOutputStream to use .getFirst() instead of .get(0).

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>